--- a/argocd-apps-values.yaml
+++ b/argocd-apps-values.yaml
@@ -23,6 +23,29 @@ applications:
       syncOptions:
         - CreateNamespace=true
         - ApplyOutOfSyncOnly=true
+  - name: argocd-apps
+    namespace: argocd
+    destination:
+      namespace: argocd
+      server: https://kubernetes.default.svc
+    project: argocd
+    sources:
+      - chart: argocd-apps
+        repoURL: https://argoproj.github.io/argo-helm
+        targetRevision: 6.2.1
+        helm:
+          version: v3
+          valueFiles:
+            - $values/argocd-apps-values.yaml
+      - repoURL: https://github.com/pasquale-jp/argocd-apps-test.git
+        targetRevision: HEAD
+        ref: values
+    syncPolicy:
+      automated:
+        selfHeal: true
+        prune: true
+      syncOptions:
+        - ApplyOutOfSyncOnly=true
 projects:
   - name: argocd
     namespace: argocd
