--- a/argocd-apps-values.yaml
+++ b/argocd-apps-values.yaml
@@ -46,6 +46,22 @@ applications:
         prune: true
       syncOptions:
         - ApplyOutOfSyncOnly=true
+  - name: nginx
+    namespace: nginx
+    destination:
+      namespace: nginx
+      server: https://kubernetes.default.svc
+    project: argocd
+    sources:
+      - chart: nginx-ingress
+        repoURL: https://helm.nginx.com/stable
+        targetRevision: 0.17.1
+    syncPolicy:
+      automated:
+        selfHeal: true
+        prune: true
+      syncOptions:
+        - ApplyOutOfSyncOnly=true
 projects:
   - name: argocd
     namespace: argocd
@@ -55,6 +71,7 @@ projects:
     sourceRepos:
       - https://argoproj.github.io/argo-helm
       - https://github.com/pasquale-jp/argocd-apps-test.git
+      - https://helm.nginx.com/stable
     destinations:
       - namespace: argocd
         server: https://kubernetes.default.svc
