--- a/argocd-apps-values.yaml
+++ b/argocd-apps-values.yaml
@@ -75,6 +75,8 @@ projects:
     destinations:
       - namespace: argocd
         server: https://kubernetes.default.svc
+      - namespace: nginx
+        server: https://kubernetes.default.svc
     clusterResourceWhitelist:
       - group: '*'
         kind: '*'
