--- a/argocd-apps-values.yaml
+++ b/argocd-apps-values.yaml
@@ -46,23 +46,23 @@ applications:
         prune: true
       syncOptions:
         - ApplyOutOfSyncOnly=true
-  # - name: nginx
-  #   namespace: nginx
-  #   destination:
-  #     namespace: nginx
-  #     server: https://kubernetes.default.svc
-  #   project: argocd
-  #   sources:
-  #     - chart: nginx-ingress
-  #       repoURL: https://helm.nginx.com/stable
-  #       targetRevision: 0.17.1
-  #   syncPolicy:
-  #     automated:
-  #       selfHeal: true
-  #       prune: true
-  #     syncOptions:
-  #       - CreateNamespace=true
-  #       - ApplyOutOfSyncOnly=true
+  - name: test-service
+    namespace: argocd
+    destination:
+      namespace: test
+      server: https://kubernetes.default.svc
+    project: argocd
+    sources:
+      - chart: generic
+        repoURL: oci://ghcr.io/henrywhitaker3/generic
+        targetRevision: 1.3.3
+    syncPolicy:
+      automated:
+        selfHeal: true
+        prune: true
+      syncOptions:
+        - CreateNamespace=true
+        - ApplyOutOfSyncOnly=true
 projects:
   - name: argocd
     namespace: argocd
@@ -73,10 +73,11 @@ projects:
       - https://argoproj.github.io/argo-helm
       - https://github.com/pasquale-jp/argocd-apps-test.git
       - https://helm.nginx.com/stable
+      - oci://ghcr.io/henrywhitaker3/generic
     destinations:
       - namespace: argocd
         server: https://kubernetes.default.svc
-      - namespace: nginx
+      - namespace: test
         server: https://kubernetes.default.svc
     clusterResourceWhitelist:
       - group: '*'
