--- a/argocd-apps-values.yaml
+++ b/argocd-apps-values.yaml
@@ -56,6 +56,11 @@ applications:
       - path: chart
         repoURL: https://github.com/henrywhitaker3/generic-helm-chart
         targetRevision: 5110b3ce43d9e5fb681de48119a5b0f0a1e329f3
+        helm:
+          values: |
+            image:
+              repository: 381492207002.dkr.ecr.me-central-1.amazonaws.com/staging-payments
+              tag: 0.0.3
     syncPolicy:
       automated:
         selfHeal: true
