--- a/argocd-apps-values.yaml
+++ b/argocd-apps-values.yaml
@@ -4,7 +4,7 @@ applications:
     destination:
       namespace: argocd
       server: https://kubernetes.default.svc
-    project: argocd
+    project: jp-system
     sources:
       - chart: argo-cd
         repoURL: https://argoproj.github.io/argo-helm
@@ -28,7 +28,7 @@ applications:
     destination:
       namespace: argocd
       server: https://kubernetes.default.svc
-    project: argocd
+    project: jp-system
     sources:
       - chart: argocd-apps
         repoURL: https://argoproj.github.io/argo-helm
@@ -46,49 +46,20 @@ applications:
         prune: true
       syncOptions:
         - ApplyOutOfSyncOnly=true
-  - name: test-service
-    namespace: argocd
-    destination:
-      namespace: test
-      server: https://kubernetes.default.svc
-    project: argocd
-    sources:
-      - path: chart
-        repoURL: https://github.com/henrywhitaker3/generic-helm-chart
-        targetRevision: 5110b3ce43d9e5fb681de48119a5b0f0a1e329f3
-        helm:
-          values: |
-            image:
-              repository: 381492207002.dkr.ecr.me-central-1.amazonaws.com/staging-payments
-              tag: 0.0.3
-    syncPolicy:
-      automated:
-        selfHeal: true
-        prune: true
-      syncOptions:
-        - CreateNamespace=true
-        - ApplyOutOfSyncOnly=true
 projects:
-  - name: argocd
+  - name: jp-system
     namespace: argocd
     additionalLabels: {}
     additionalAnnotations: {}
     description: ArgoCD Project
     sourceRepos:
       - https://argoproj.github.io/argo-helm
-      - https://github.com/henrywhitaker3/generic-helm-chart
       - https://github.com/pasquale-jp/argocd-apps-test.git
-      - https://helm.nginx.com/stable
     destinations:
       - namespace: argocd
-        server: https://kubernetes.default.svc
-      - namespace: test
         server: https://kubernetes.default.svc
     clusterResourceWhitelist:
       - group: '*'
         kind: '*'
     orphanedResources:
       warn: false
-applicationsets: []
-itemTemplates: []
-extensions: []
