--- a/argocd-apps-values.yaml
+++ b/argocd-apps-values.yaml
@@ -47,6 +47,22 @@ applications:
       syncOptions:
         - ApplyOutOfSyncOnly=true
 projects:
+  - name: argocd
+    namespace: argocd
+    additionalLabels: {}
+    additionalAnnotations: {}
+    description: ArgoCD Project
+    sourceRepos:
+      - https://argoproj.github.io/argo-helm
+      - https://github.com/pasquale-jp/argocd-apps-test.git
+    destinations:
+      - namespace: argocd
+        server: https://kubernetes.default.svc
+    clusterResourceWhitelist:
+      - group: '*'
+        kind: '*'
+    orphanedResources:
+      warn: false
   - name: jp-system
     namespace: argocd
     additionalLabels: {}
