--- a/argocd-apps-values.yaml
+++ b/argocd-apps-values.yaml
@@ -47,27 +47,11 @@ applications:
       syncOptions:
         - ApplyOutOfSyncOnly=true
 projects:
-  - name: argocd
-    namespace: argocd
-    additionalLabels: {}
-    additionalAnnotations: {}
-    description: ArgoCD Project
-    sourceRepos:
-      - https://argoproj.github.io/argo-helm
-      - https://github.com/pasquale-jp/argocd-apps-test.git
-    destinations:
-      - namespace: argocd
-        server: https://kubernetes.default.svc
-    clusterResourceWhitelist:
-      - group: '*'
-        kind: '*'
-    orphanedResources:
-      warn: false
   - name: jp-system
     namespace: argocd
     additionalLabels: {}
     additionalAnnotations: {}
-    description: ArgoCD Project
+    description: System services
     sourceRepos:
       - https://argoproj.github.io/argo-helm
       - https://github.com/pasquale-jp/argocd-apps-test.git
@@ -78,4 +62,4 @@ projects:
       - group: '*'
         kind: '*'
     orphanedResources:
-      warn: false
+      warn: true
