--- a/argocd-apps-gloo-values copy.yaml
+++ b/argocd-apps-gloo-values copy.yaml
@@ -46,6 +46,35 @@ applications:
         prune: true
       syncOptions:
         - ApplyOutOfSyncOnly=true
+  - name: gloo
+    namespace: argocd
+    destination:
+      namespace: gloo-system
+      server: https://kubernetes.default.svc
+    project: jp-system
+    sources:
+      - chart: gloo
+        repoURL: https://storage.googleapis.com/solo-public-helm
+        targetRevision: v1.16.4
+        helm:
+          values: |
+            discovery:
+              enabled: false
+            gateway:
+              certGenJob:
+                enabled: false
+            gatewayProxies:
+              gatewayProxy:
+                disabled: true
+            settings:
+              disableKubernetesDestinations: true
+    syncPolicy:
+      automated:
+        selfHeal: true
+        prune: true
+      syncOptions:
+        - CreateNamespace=true
+        - ApplyOutOfSyncOnly=true
 projects:
   - name: jp-system
     namespace: argocd
