--- a/argocd-apps-github-arc-values.yaml
+++ b/argocd-apps-github-arc-values.yaml
@@ -54,7 +54,7 @@ applications:
     project: jp-system
     sources:
       - chart: gha-runner-scale-set-controller
-        repoURL: oci://ghcr.io/actions/actions-runner-controller-charts
+        repoURL: ghcr.io/actions/actions-runner-controller-charts
         targetRevision: 0.8.3
     syncPolicy:
       automated:
