--- a/argocd-apps-github-arc-values.yaml
+++ b/argocd-apps-github-arc-values.yaml
@@ -63,6 +63,7 @@ applications:
       syncOptions:
         - CreateNamespace=true
         - ApplyOutOfSyncOnly=true
+        - ServerSideApply=true
 projects:
   - name: jp-system
     namespace: argocd
